kube/applications/finance/firefly-iii/traefikIngress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-firefly-iii
  namespace: finance
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`firefly.homelab.me`)
      priority: 10
      services:
        - name: firefly-firefly-iii
          port: 80
  tls:
    secretName: firefly-firefly-iii-certificate

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-importer
  namespace: finance
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`firefly-importer.homelab.me`)
      priority: 10
      services:
        - name: firefly-importer
          port: 80
  tls:
    secretName: firefly-importer-certificate
